web-infras/parser/tests/fixtures/babel/es2015/for-in/let-initializer/output.txt
[SyntaxError]: 'for-in' loop variable declaration may not have an initializer. (1,10)
1|for (let a = 0 in {});
 |        ^
